--- a/FinalProject/src/main/resources/static/assets/css/lessonbox.css
+++ b/FinalProject/src/main/resources/static/assets/css/lessonbox.css
@@ -39,3 +39,28 @@
     font-weight: 500;
     text-transform: lowercase;
 }
+
+.tb-middle {
+	vertical-align:middle !important;
+	text-align:center !important;
+}
+
+.tb-centered {
+	text-align:center !important;
+}
+
+.tb-plus {
+	text-align:center;
+}
+
+.tb-inlineBlock {
+	display:inline-block;
+}
+
+.tb-middle2 {
+	position: relative;
+	margin-left: auto;
+  	margin-right: auto;
+  	margin-top: auto;
+  	margin-bottom: auto;
+}
