--- a/FinalProject/src/main/resources/static/assets/css/onoff.css
+++ b/FinalProject/src/main/resources/static/assets/css/onoff.css
@@ -48,3 +48,25 @@ label.onoff:active:after {
 /* 	align-items: center; */
 /* 	height: 100vh; */
 /* } */
+
+.give-border {
+	border-left:1px solid;
+	border-right:1px solid;
+	border-bottom:1px solid;
+	border-color:lightgray;
+	border-radius: 0 0 20px 20px !important;
+}
+
+.add-file {
+    font-size: 1.5rem;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    opacity: .5;
+}
+
+.add-file-sp {
+    font-size: 12px;
+    color: #228B22;
+}
