--- a/FinalProject/src/main/resources/static/assets/css/allcss.css
+++ b/FinalProject/src/main/resources/static/assets/css/allcss.css
@@ -28,3 +28,28 @@ div{
 }
 
 
+
+body#mainB{
+	background-color: black;
+}
+
+
+.ajaxBtn{
+	  display: inline-block;
+	   color: black;
+
+  float: left;
+
+  padding: 8px 16px;
+
+  text-decoration: none;
+
+  border-radius:50%;
+}
+
+
+.collapse-item{
+	
+	color: gray;
+}
+
